# Cortex-Browser

./: .env.production  App.tsx  Cargo.toml  NeuroRust.md  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  tauri.conf.json  tsconfig.json  types.ts  vite.config.ts
components/: AgentStatusPanel.tsx  AiSidebar.tsx  BootScreen.tsx  CommandPalette.tsx  DataView.tsx  InspectorPanel.tsx  MemorySpace.tsx  NeuroVis.tsx  OmniBar.tsx  Toast.tsx  WebView.tsx
docs/: ARCHITECTURE.md  NEURORUST_WHITE_PAPER.md  RUST_KERNEL_SPEC.md
hooks/: useCortex.ts
services/: geminiService.ts  ipc.ts  kernel.ts
src/: App.css  App.tsx  index.css  lib.rs  main.rs  types.ts
src/components/: CommandPalette.tsx  NeuroVis.tsx  OmniBar.tsx
src/neurorust/: engine.ts  types.ts
